[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artiq"
version = "0.0"  # This will be overridden by versioneer
description = "A leading-edge control system for quantum information experiments"
readme = "README.md"
license = {text = "LGPLv3"}
authors = [
    {name = "M-Labs", email = "artiq@lists.m-labs.hk"},
]
dependencies = [
    "numpy",
    "scipy",
    "python-dateutil",
    "prettytable",
    "h5py",
    "lmdb",
    "qasync",
    "pyqtgraph",
    "pygit2",
    "llvmlite",
    "pythonparser",
    "levenshtein",
    "platformdirs",
    "pandas>=2.3.1",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
]
[project.urls]
Homepage = "https://m-labs.hk/artiq"
Documentation = "https://m-labs.hk/artiq/manual/"
Repository = "https://github.com/m-labs/artiq"
Issues = "https://github.com/m-labs/artiq/issues"
[tool.setuptools]
packages = ["artiq"]
